# syene-simulation

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deployment.yml
public/: index.html  manifest.json  simulation.d.ts  simulation.js  simulation_bg.wasm  simulation_bg.wasm.d.ts
rust-proximum-simulation/: Cargo.toml  build.rs
rust-proximum-simulation/src/: bindings.rs  geometry.rs  kalman.rs  physics.rs  simulation.rs  types.rs
simulation/: .gitignore  Cargo.toml
simulation/src/: bindings.rs  lib.rs  physics.rs  simulation.rs  types.rs
src/: App.js  App.tsx  Globe.js  H3Map.js  Link.tsx  Map.tsx  Nodes.js  Nodes.tsx  SimulationControls.tsx  index.css  index.tsx  simulation.js  types.ts
src/Map/: GeodesicLine.tsx  IntroModal.tsx  Map.tsx  SimulationControls.tsx  Stats.tsx
src/simulation/: IntroModal.tsx  LeafletEllipse.tsx  Map.tsx  NodeDescriptionPopup.tsx  SimulationForm.tsx  SimulationFormComponents.tsx  SimulationOverlay.tsx  Stats.tsx
web/: README.md  package-lock.json  package.json  tailwind.config.js
web/public/: index.html  manifest.json  package.json
web/rust-proximum-simulation/: Cargo.toml  build.rs
web/rust-proximum-simulation/src/: bindings.rs  geometry.rs  kalman.rs  least_squares.rs  lib.rs  node.rs  physics.rs  simulation.rs  simulation_manager.rs  stats.rs  types.rs
web/src/: App.tsx  Map.tsx  WelcomeModal.tsx  arc.d.ts  index.css  leaflet-ellipse.d.ts  tailwind.css  types.ts  utils.ts
web/src/simulation/: GeodesicLine.tsx  NodeDescriptionPopup.tsx  SimulationForm.tsx  SimulationFormComponents.tsx  SimulationMapContent.tsx  SimulationOverlay.tsx  SimulationView.tsx  Stats.tsx  StatsView.tsx
web/src/testnet/: TestnetMapContent.tsx
