[package]
name = "proximum-simulation"
version = "0.1.0"
edition = "2021"
description = "simulation of Proximum state estimation for stationary terrestrial nodes"
license = "None"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
h3o = { version = "0.6.2", features = ["serde"] }
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
num-traits = "0.2.18"
adskalman = "0.15.1"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib", "rlib"]
